handle full screen/status bar issues on ios, style the buttons more responsibvely

--- a/www/css/readerstyle.css
+++ b/www/css/readerstyle.css
@@ -18,7 +18,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Helvetica Neue', 'Lato', 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 14px;
 }
 
@@ -64,11 +64,11 @@
     align-items: center;
     -webkit-justify-content: space-between;
     justify-content: space-between;
-    height: 44px;
-    line-height: 44px;
+    /* height: 44px; */
+    /* line-height: 44px; */
 
-    height: 55px;
-    line-height: 55px;
+    height: 5.5vh;
+    line-height: 5.5vh;
 
     padding: 0 10px;
 }
@@ -276,7 +276,7 @@
     color: #000;
     z-index: 1001;
     box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, .2);
-    font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Helvetica Neue', 'Lato', 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .app .sidebar-wrapper-left {
@@ -666,9 +666,10 @@
 
 @media only screen and (max-width: 950px) {
     .app .readerBar {
-        height: 36px;
-        line-height: 36px;
-        padding: 0 4px;
+        height: 46px;
+        line-height: 46px;
+        padding: 0 10px;
+	margin-top: 10px;
     }
 }
 
